Fixed possible crash with reading wav files. Patch by Peter van Fessem <peter@f-is.eu>.

BUG: 174819

svn path=/trunk/extragear/multimedia/amarok/; revision=883131